fix visibility footer

--- a/converterMoney.css
+++ b/converterMoney.css
@@ -124,7 +124,7 @@ footer{
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 2vh;
 }
 
 footer div {
@@ -134,7 +134,7 @@ footer div {
 
 footer div a {
     color: #fff;
-    outline: none;
+    text-decoration: none;
 }
 
 footer div img {
